--- a/FitUP/bin/.classpath
+++ b/FitUP/bin/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry excluding="FitUP/src/" kind="src" path=""/>
-	<classpathentry kind="src" path="FitUP/src"/>
-	<classpathentry kind="output" path="FitUP/bin"/>
+	<classpathentry kind="src" path=""/>
+	<classpathentry kind="output" path="it/unipv/sfw/esame/progettoC23/bin"/>
 </classpath>
