Update di gestione

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/viroe/Downloads/mysql-connector-java-8.0.19 (1).jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="FitUP/bin"/>
 </classpath>
