--- a/FitUP/src/.classpath
+++ b/FitUP/src/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
+	<classpathentry kind="lib" path="jdatepicker-1.3.4.jar"/>
 	<classpathentry kind="output" path="it/unipv/sfw/esame/progettoC23/bin"/>
 </classpath>
