--- a/FitUP/src/.classpath
+++ b/FitUP/src/.classpath
@@ -6,14 +6,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Reb20/Downloads/mysql-connector-java-8.0.19 (1).jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="jgoodies-common-1.8.0.jar" sourcepath="jgoodies-common-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
-	<classpathentry kind="lib" path="jdatepicker-1.3.4.jar"/>
-	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/FitUP/lib/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="/FitUP/lib/jdatepicker-1.3.4.jar"/>
+	<classpathentry kind="lib" path="/FitUP/lib/jgoodies-common-1.8.0.jar"/>
+	<classpathentry kind="lib" path="/FitUP/lib/jgoodies-forms-1.8.0.jar"/>
+	<classpathentry kind="lib" path="/FitUP/lib/mysql-connector-java-8.0.19 (1).jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="it/unipv/sfw/esame/progettoC23/bin"/>
 </classpath>
