--- a/FitUP/.classpath
+++ b/FitUP/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="lib"/>
 	<classpathentry kind="lib" path="C:/Users/Reb20/Documents/GitHub/Progetto-C23/FitUP/lib/mysql-connector-java-8.0.19 (1).jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
